# lab3

./: array_sequence.hpp  dynamic_array.hpp  exceptions.hpp  immutable_triangle_matrix.hpp  linked_list.hpp  list_sequence.hpp  tests.cpp  triangle_matrix.hpp
tests/: test_immutable_triangle_matrix_constructors.cpp  test_immutable_triangle_matrix_exceptions.cpp  test_immutable_triangle_matrix_functions.cpp  test_immutable_triangle_matrix_math.cpp  test_immutable_triangle_matrix_operators.cpp  test_triangle_matrix_constructors.cpp  test_triangle_matrix_exceptions.cpp  test_triangle_matrix_functions.cpp  test_triangle_matrix_math.cpp  test_triangle_matrix_operators.cpp
ui/: CMakeLists.txt  firework.h  mainwindow.cpp  mainwindow.h  matrix_model.hpp
